# gennie-x

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt  run_cli.py  run_web.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
RESPEC/prompts/: 1.system-doc-prompt.md  2.test-plan.prompt.md  3.generate-tests.prompt.md
config/: .env.example  config.example.yaml
src/: __version__.py
src/extract_plugins/: agent_extractor.py  agent_registry.py  readme.md
src/extract_plugins/claude_code/: agent.py  extractor.py  metadata.json
src/extract_plugins/copilot/: agent.py  edits.py  extractor.py  metadata.json
src/extract_plugins/cursor/: agent.py  bubbles.py  extractor.py  metadata.json  turns.py
src/pipeline/extraction/: extractor.py  orchestrator.py  storage.py  turn_enrichment.py  workspace_discovery.py
src/shared/code/: code_metrics.py  language_utils.py  loc_counter.py
src/shared/config/: config_loader.py  models.py
src/shared/database/: db_extract.py  db_schema.py  db_search.py  db_validation.py
src/shared/io/: paths.py  run_dir.py
src/shared/llm/: __init__.py  model_names.py  token_utils.py
src/shared/logging/: logger.py
src/shared/models/: code_metric.py  combined_turn.py  dataclass_mixin.py  turn.py  workspace.py
src/shared/search/: embeddings.py  search_indexer.py
src/shared/text/: stupid_text_cleaner.py  text_shrinker.py
src/shared/text/text-line-classifier/: README.md
src/shared/text/text-line-classifier/model/: classifier.py  features.py  trained_model.pkl
src/web/: app.py  server.py  shared_state.py
src/web/dashboards/: README.md  extraction.yaml  loader.py  system_extraction.yaml
src/web/data_providers/: extraction_provider.py  system_provider.py
src/web/routers/: agents.py  config.py  dashboards.py  extraction.py  runs.py  search.py  sessions.py  system.py  workspaces.py
src/web/services/: config_service.py  dashboard_service.py  extraction_service.py  pipeline_run_tracker.py  sse_streaming.py
src/web/static/: styles.css
src/web/static/charts/: carousel-renderer.js  chart-renderer.js  heatmap-renderer.js  script-loader.js  table-renderer.js  utils.js  wordcloud-renderer.js
src/web/static/js/: agent-info.js  carousel.js  dashboard-renderer.js  extraction-tips.js  formatters.js  keyboard-nav.js  modals.js  nav-init.js  navigation.js  sessions.js  sse-handler.js  turns.js
src/web/static/pages/browse/: index.html  page.js
src/web/static/pages/config/: index.html  page.js
src/web/static/pages/search/: index.html  page.js
src/web/static/pages/system/: index.html  page.js
src/web/static/pages/workspace/: index.html  page.js
src/web/utils/: perf_timer.py
tests/: README.md  TEST_REVIEW_FINDINGS.md  __init__.py
tests/integration/: __init__.py  conftest.py  test_contracts_integration.py  test_extract.py  test_list.py  test_refresh.py  test_web_api.py
tests/unit/: conftest.py  test_cli_extract.py  test_cli_list.py  test_cli_search.py  test_config_isolation.py  test_contracts.py  test_data_artifacts.py  test_web_api.py
