[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gennie-x"
# Version is defined in src/__version__.py - single source of truth
description = "Extract and analyze Copilot/Cursor chat sessions"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Hosam Shahin" },
]
keywords = ["ai", "copilot", "cursor", "claude", "chat", "extraction", "analytics", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "duckdb>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiohttp",
    "lizard>=1.17.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.8.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pytest>=7.4.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/hosamsh/gennie-x"
Repository = "https://github.com/hosamsh/gennie-x"

[tool.setuptools.dynamic]
version = {attr = "src.__version__.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
# General ruff config. Lint-specific options moved to `lint` subsection

[tool.ruff.lint]
# Enable only important categories:
# F: Pyflakes (logic bugs, undefined names)
# E: Pycodestyle errors
# B: Bugbear (common pitfalls)
# PL: Pylint (refactoring suggestions)
select = ["F", "E", "B", "PL"]
ignore = [
    "E501",     # Line too long (style)
    "E701",     # Multiple statements on one line
    "E722",     # Bare except (sometimes needed for catch-all)
    "E402",     # Module level import not at top (test files)
    "PLR",      # Pylint Refactor (often too pedantic)
    "PLC0415",
    "PLW0603",  # Global without assignment
    "PLW0602",  # Global without assignment
    "PLW2901",  # Loop variable overwritten (common pattern)
    "PLW1510",  # subprocess.run without check (tests)
    "B905",
    "E741",
    "B904",     # raise from in except (verbose)
    "B007",     # Unused loop variable (use _ prefix if needed)
    "B023",     # Function definition does not bind loop variable
    "E731",     # Lambda assignment (sometimes cleaner)
    "F841",     # Unused variable (too noisy during dev)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"  # Changed from strict - too noisy for this codebase
reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = true
reportUnusedImport = false  # Handled by ruff
reportUndefinedVariable = true
# Disable noisy reports that are style issues, not bugs
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingTypeArgument = false
reportUnusedVariable = false  # Handled by ruff F841
reportUnusedFunction = false  # FastAPI routes flagged as unused
reportMissingParameterType = false  # **kwargs often untyped
reportUnnecessaryIsInstance = false  # Defensive coding is fine
reportUnnecessaryComparison = false  # Defensive checks are fine
reportOptionalMemberAccess = false  # Too strict for dynamic code
reportUnknownLambdaType = false
reportDeprecated = false  # Will fix these incrementally
reportAttributeAccessIssue = false  # Dynamic attributes common
reportArgumentType = false  # Too strict, many false positives
reportReturnType = false  # Covariance issues with List types
reportOperatorIssue = false  # Complex union types
reportCallIssue = false  # Dataclass/dict conversion issues
reportUntypedFunctionDecorator = false
